Fix space card on mobile

--- a/src/components/countryInformation/countryInformation.scss
+++ b/src/components/countryInformation/countryInformation.scss
@@ -52,6 +52,7 @@
   @media (max-width: 500px) {
     &-card {
       width: 90%;
+      margin-bottom: 2rem;
     }
   }
 }
